# mafgame

./: .gitignore  AGENTS.md  Taskfile.yml  UNDERSTANDING_CHECKLIST.md  main.py  pyproject.toml
cmd/: main.py
game_rules/: day_turn.py  initial_state.json  world.py
tests/: conftest.py  test_day_turn.py  test_world.py
игра/Project District/: 00-Обзор.md  Project District.canvas  dataview-index.md  glossary.json  implementation-plan.md  product-brief.md  project-path.md  readiness-report.md  refined-requirements.json  spec-config.json  spec-summary.md  visualizations.md
игра/Project District/architecture/: ADR-001-turn-engine.md  ADR-002-fixed-data-model.md  ADR-003-qualitative-risk.md  ADR-004-report-first-ui.md  ADR-005-readable-ai.md  _index.md
игра/Project District/epics/: EPIC-001-core-loop.md  EPIC-002-map-and-state.md  EPIC-003-orders-and-resolution.md  EPIC-004-reports-and-feedback.md  EPIC-005-ai-police-winloss.md  EPIC-006-balance-and-playtest.md  _index.md
игра/Project District/requirements/: NFR-M-001-small-scope.md  NFR-P-001-turn-speed.md  NFR-U-001-readable-feedback.md  REQ-001-day-loop.md  REQ-002-district-map.md  REQ-003-crews-and-orders.md  REQ-004-outcome-resolution.md  REQ-005-reports.md  REQ-006-win-loss.md  REQ-007-enemy-ai.md  REQ-008-balance-config.md  REQ-009-simple-2d-map.md  _index.md
игра/Project District/roadmap/: Kanban.md  issues.jsonl  roadmap.md  worklog.md
игра/roadmap-progress-tracker/: SKILL.md
игра/roadmap-progress-tracker/agents/: openai.yaml
игра/roadmap-progress-tracker/references/: worklog-template.md
(+1 files in other folders)
