[project]
name = "mafgame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
